# shuttle_cch

./: Cargo.toml  README.md  Shuttle.toml  cftunnel.ps1
.cargo/: config.toml
src/: application.rs  lib.rs  main.rs  routes.rs  telemetry.rs
src/routes/: day0.rs  day1.rs  day11.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  four.rs  health_check.rs  home.rs  neg_one.rs  one.rs  seven.rs  six.rs
tests/api/: day1.rs  day11.rs  day4.rs  day6.rs  day7.rs  day8.rs  four.rs  health_check.rs  helpers.rs  main.rs  one.rs  six.rs
