[package]
name = "cch23-damccull"
version = "0.1.0"
edition = "2021"
#default-run = "cch"

[features]
default = ["shuttle"]
shuttle = ["dep:shuttle-actix-web","dep:shuttle-runtime"]

[lib]
name = "cch_23"
path = "src/lib.rs"

[[bin]]
name = "cch23-damccull"
path = "src/main.rs"

[dependencies]
actix-web = "4.3.1"
anyhow = "1.0.75"
base64 = "0.21.5"
fancy-regex = "0.12.0"
nom = "7.1.3"
serde = { version = "1.0.193", features = ["derive"] }
thiserror = "1.0.50"
tokio = {version = "1.26.0", features = ["full"]}
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.9"
tracing-bunyan-formatter = "0.3.9"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[dev-dependencies]
once_cell = "1.18.0"
reqwest = { version = "0.11.22", features = ["json"] }
serde_json = "1.0.108"
